<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".AdvanceLevel">


    <EditText
        android:id="@+id/AdvacePlaintText2"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:hint="@string/Guess_A_Car"
        android:importantForAutofill="no"
        android:inputType="text"

        android:onClick="onEditTextClick2"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="viewStart"

        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <EditText
        android:id="@+id/AdvacePlaintText3"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:focusable="true"
        android:hint="@string/Guess_A_Car"
        android:importantForAutofill="no"
        android:inputType="text"
        android:onClick="onEditTextClick3"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/black"

        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <ImageView
        android:id="@+id/CarImageAdvance1"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/a_random_car"
        android:src="@drawable/benz_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <ImageView
        android:id="@+id/CarImageAdvance2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/a_random_car"
        android:src="@drawable/benz_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <ImageView
        android:id="@+id/CarImageAdvance3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/a_random_car"
        android:src="@drawable/ford_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <Button
        android:id="@+id/lvl4Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onSubmit"
        android:text="@string/submit"
        android:textAlignment="center"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/AdvacePlaintText1"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:hint="@string/Guess_A_Car"
        android:importantForAutofill="no"
        android:inputType="text"
        android:onClick="onEditTextClick1"

        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/AdvanceAnswer01"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:text="@string/CarName"
        android:textAlignment="viewStart"
        android:textColor="@color/purple_200"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <TextView
        android:id="@+id/AdvanceHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/guess_car_makes_advance"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AdvanceAnswer02"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:text="@string/CarName"
        android:textAlignment="viewStart"
        android:textColor="@color/purple_200"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/AdvanceAnswer03"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:text="@string/CarName"
        android:textAlignment="viewStart"
        android:textColor="@color/purple_200"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <TextView
        android:id="@+id/ScoreText"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:text="@string/score"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lvl4ScoreChanging"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:text="@string/Scorevalue"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AdvanceCorrectWrong"
        android:layout_width="92dp"
        android:layout_height="26dp"
        android:layout_marginBottom="100dp"
        android:text="@string/correct"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lvl4Timer"
        android:layout_width="48dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="393dp"
        android:layout_marginBottom="657dp"
        android:text="@string/timestamp"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>